--- a/description
+++ b/description
@@ -8,3 +8,4 @@ Date: 2005-09-15
 Description: An implementation of Karatsuba's Multiplication algorithm
 Keywords: karatsuba multiplication binary ring
 URL: http://r6.ca/Karatsuba/
+Category: Mathematics/Arithmetic and Number Theory/Number theory
