fix keywords syntax

--- a/description
+++ b/description
@@ -6,6 +6,6 @@ Homepage: http://r6.ca/
 Institution: Institute for Computing and Information Science, Faculty of Science, Radboud University Nijmegen
 Date: 2005-09-15
 Description: An implementation of Karatsuba's Multiplication algorithm
-Keywords: karatsuba multiplication binary ring
+Keywords: karatsuba multiplication, binary ring
 Url: http://r6.ca/Karatsuba/
 Category: Mathematics/Arithmetic and Number Theory/Number theory
